# ledgerx

./: .gitignore  README.md  ledgerx.code-workspace
.github/workflows/: daily_cron.yml
ledgerx-api/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.in  requirements.txt
ledgerx-api/archived/: bill_parser_v2.py  table_parser.py  token_cipher.py
ledgerx-api/core/: config.py  dependencies.py  logging_config.py  schemas.py
ledgerx-api/db/: database.py  db_wrapper.py  ledgerx.db  schema_init_sqlite.py
ledgerx-api/integrations/: gdrive_service.py  gmail_service.py  google_oauth.py
ledgerx-api/jobs/: fetch_bills.py  fetch_bills_job.py  gdrive_job.py  reminders_job.py
ledgerx-api/notebooks/: newnb.ipynb  poc.ipynb
ledgerx-api/router/: reminders.py
ledgerx-api/routers/: auth.py  bills.py  fetch_bills.py  health.py  source.py  tasks.py
ledgerx-api/services/: jobs.py  progress.py
ledgerx-api/utils/: bill_parser.py  bill_parser_v2.py  bill_preprocessing.py  bill_utils.py  deterministic_validator.py  field_extractor.py  gdrive_service.py  gmail_service.py  google_oauth.py  password_crypto.py  pattern_field_extractor.py  pdf_extract_text.py  session_store.py  table_parser.py
ledgerx-web/: config.py  main.py  pyproject.toml
ledgerx-web-typescript/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ledgerx-web-typescript/src/: App.tsx  ledger.ts  types.ts  utils.ts
ledgerx-web-typescript/src/components/: SummaryCards.tsx
ledgerx-web/utils/: google_oauth.py
