[project]
name = "ledgerx-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.60.0",
    "fastapi>=0.118.0",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "ocrmypdf>=16.11.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pikepdf>=9.11.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "uvicorn>=0.37.0",
]
