[project]
name = "ledgerx-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.13.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.1",
    "attrs==26.1.0",
    "beautifulsoup4==4.14.3",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorlog==6.10.1",
    "cryptography==46.0.5",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.4.3",
    "defusedxml==0.7.1",
    "dill==0.4.1",
    "docling==2.81.0",
    "docling-core==2.70.2",
    "docling-ibm-models==3.12.0",
    "docling-parse==5.6.0",
    "et-xmlfile==2.0.0",
    "faker==40.11.0",
    "fastapi==0.135.1",
    "filelock==3.25.2",
    "filetype==1.2.0",
    "fsspec==2026.2.0",
    "google-api-core==2.30.0",
    "google-api-python-client==2.193.0",
    "google-auth==2.49.1",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.3.0",
    "googleapis-common-protos==1.73.0",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "httplib2==0.31.2",
    "huggingface-hub==0.36.2",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonlines==4.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "latex2mathml==3.79.0",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "marko==2.2.2",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpire==2.10.2",
    "mpmath==1.3.0",
    "multiprocess==0.70.19",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "oauthlib==3.3.1",
    "ocrmypdf>=16.11.0",
    "omegaconf==2.3.0",
    "onnxruntime>=1.23.2",
    "opencv-python==4.13.0.92",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.1",
    "pdf2image>=1.17.0",
    "pikepdf>=9.11.0",
    "pillow==12.1.1",
    "pluggy==1.6.0",
    "polyfactory==3.3.0",
    "proto-plus==1.27.1",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "psycopg-binary==3.3.3",
    "psycopg[binary]==3.3.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pyclipper==1.4.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "pylatexenc==2.10",
    "pymupdf>=1.26.4",
    "pyparsing==3.3.2",
    "pypdfium2==5.6.0",
    "pytesseract>=0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-pptx==1.0.2",
    "pyyaml==6.0.3",
    "qwen-vl-utils>=0.0.14",
    "rapidocr==3.7.0",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "rtree==1.4.1",
    "safetensors==0.7.0",
    "scipy==1.17.1",
    "semchunk==3.2.5",
    "setuptools==82.0.1",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "tree-sitter==0.25.2",
    "tree-sitter-c==0.24.1",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "triton==3.6.0",
    "typer==0.21.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "xlsxwriter==3.2.9",
]
