[project]
name = "ledgerx-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "pikepdf>=10.5.1",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "uvicorn>=0.42.0",
]
